welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:4: error: value by is not a member of Int
		for (j<-getMondeHauteur-1 by -1 to 0){
                                          ^