welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
	var x=0
	for (i<-0 to getMondeLargeur-1) {
		for (j<-getMondeHauteur-1 by -1 to 0){
			setPos(j,i)
			ecritMessage(x)
			x += 1
		}
	}
}
